fixed mobile css

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="icon" href="#">
     <meta name="description" content="#">
     <link rel="stylesheet" href="library/css/main.css">
-    <link rel="stylesheet" href="library/css/home-page-mobile.css">
+    <link rel="stylesheet" href="library/css/mobile/home-page-mobile.css">
 
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700" rel="stylesheet">
 </head>
@@ -53,7 +53,7 @@
 
 		<form id="frmSearch" class="search2" method="get" action="default.html" />
 		<input class="search2" id="txtSearch" type="text" name="serach_bar" size="31" maxlength="255"       
-		value="" placeholder="Input a store name" style="left: 396px; top: 153px; width: 807px; height: 40px; padding-left: 15px;" />
+		value="" placeholder="Input a store name"/>
 <!-- 		<input class="search1" type="submit" name="submition" value="Search" style=" padding- 
 		bottom:20px; left: 691px; top: 153px; height: 23px" /> -->
 		<input class="search2" type="hidden" name="sitesearch" value="default.html" />
