--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <!-- favicon -->
     <link rel="icon" href="#">
     <meta name="description" content="#">
-    <link rel="stylesheet" href="library/css/main.css">
-    <link rel="stylesheet" href="library/css/mobile/home-page-mobile.css">
+    <link rel="stylesheet" href="/library/css/main.css">
+    <link rel="stylesheet" href="/library/css/mobile/home-page-mobile.css">
 
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700" rel="stylesheet">
 </head>
@@ -23,7 +23,7 @@
 			<div class="connection-status">
 				<div class="network-status">
 					<h6> Network Status: </h6>
-					<img class="connected" src="library/img/network-right.png" />
+					<img class="connected" src="/library/img/network-right.png" />
 					<a href="#" class="status"> IPFS connected</a>
 				</div>
 				<a class="change-network" href="#">Change network</a>
@@ -32,9 +32,9 @@
 		<div class="nav-right">
 			<a class="nav-link nav-item" href="#">Sell on SafeMarket</a>
 			<a class="nav-link nav-item" href="#">Log in</a>
-			<img class="nav-line" src="library/img/nav-line.png" />
+			<img class="nav-line" src="/library/img/nav-line.png" />
 			<div class="cart-group">
-				<a href="#"><img class="cart-img" src="library/img/cart.png" /></a>
+				<a href="#"><img class="cart-img" src="/library/img/cart.png" /></a>
 				<a class="nav-link" href="#">Cart</a>
 			</div>
 			<a class="nav-link nav-item" href="#">What is SafeMarket?</a>
@@ -65,7 +65,7 @@
 <!-- 3 Feature -->
 	<div class="Feature">
 		<div class="feature-grid">
-			<img class="feature-img" src="library/img/security.png" />
+			<img class="feature-img" src="/library/img/security.png" />
 			<div class="feature-text">
 				<h4 class="feature-title">Security</h4>
 		       	<h4 class="feature-description">Add a sentence to describe this featuew</h4>
@@ -73,7 +73,7 @@
 	    </div>
 
 	    <div class="feature-grid">
-			<img class="feature-img" src="library/img/privacy.png" />
+			<img class="feature-img" src="/library/img/privacy.png" />
 			<div class="feature-text">
 				<h4 class="feature-title">Privacy</h4>
 		       	<h4 class="feature-description">Add a sentence to describe this featuew</h4>
@@ -81,7 +81,7 @@
 	    </div>
 
 	    <div class="feature-grid">
-			<img class="feature-img" src="library/img/autonomy.png" />
+			<img class="feature-img" src="/library/img/autonomy.png" />
 			<div class="feature-text">
 				<h4 class="feature-title">Autonomy</h4>
 		       	<h4 class="feature-description">Add a sentence to describe this featuew</h4>
@@ -99,22 +99,22 @@
 	<h4 class="featured-stores-tittle">Featured Stores</h4>
 	<div class="featured-stores">
 		<div class="featured-stores-grid">
-			<a href="#"><img class="store-img" src="library/img/orange.png" /></a>
+			<a href="#"><img class="store-img" src="/library/img/orange.png" /></a>
 			<h4>From <a href="#" class="featured-store-name">Cali Orange Store</a></h4>
 			<h4 class="store-description">A description of the store, better one or two sentence.</h4>
 		</div>
 		<div class="featured-stores-grid">
-			<a href="#"><img class="store-img" src="library/img/orange.png" /></a>
+			<a href="#"><img class="store-img" src="/library/img/orange.png" /></a>
 			<h4>From <a href="#" class="featured-store-name">Cali Orange Store</a></h4>
 			<h4 class="store-description">A description of the store, better one or two sentence.</h4>
 		</div>
 		<div class="featured-stores-grid">
-			<a href="#"><img class="store-img" src="library/img/orange.png" /></a>
+			<a href="#"><img class="store-img" src="/library/img/orange.png" /></a>
 			<h4>From <a href="#" class="featured-store-name">Cali Orange Store</a></h4>
 			<h4 class="store-description">A description of the store, better one or two sentence.</h4>
 		</div>
 		<div class="featured-stores-grid">
-			<a href="#"><img class="store-img" src="library/img/orange.png" /></a>
+			<a href="#"><img class="store-img" src="/library/img/orange.png" /></a>
 			<h4>From <a href="#" class="featured-store-name">Cali Orange Store</a></h4>
 			<h4 class="store-description">A description of the store, better one or two sentence.</h4>
 		</div>				
@@ -128,7 +128,7 @@
         <p>Copyright © <strong>ConsenSys 2017</strong>. All right reserved.</p>
        	<div class="footer-right">
         	<p>A <strong>ConsenSys</strong> formation.</p> 
-        	<img class="footer-logo" src="library/img/logo-footer.png" />
+        	<img class="footer-logo" src="/library/img/logo-footer.png" />
         </div>
       </div>
     </div>
