--- a/pages/product-page.html
+++ b/pages/product-page.html
@@ -9,8 +9,8 @@
     <!-- favicon -->
     <link rel="icon" href="">
     <meta name="description" content="#">
-    <link rel="stylesheet" href="library/css/main.css">
-    <link rel="stylesheet" href="library/css/mobile/product-page-mobile.css">
+    <link rel="stylesheet" href="/library/css/main.css">
+    <link rel="stylesheet" href="/library/css/mobile/product-page-mobile.css">
 
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
@@ -26,14 +26,14 @@
 				<a class="nav-title" href="#">SafeMarket</a>
 
 				<div class="nav-searchbar">
-					<img class="nav-search-bar" src="library/img/search-bar.png" />
+					<img class="nav-search-bar" src="/library/img/search-bar.png" />
 					<h6 class="nav-search-input">Input a store name</h6>
 				</div>
 			</div>
 			<div class="connection-status">
 				<div class="network-status">
 					<h6> Network Status: </h6>
-					<img class="connected" src="library/img/network-right.png" />
+					<img class="connected" src="/library/img/network-right.png" />
 					<a href="#" class="status"> IPFS connected</a>
 				</div>
 				<a class="change-network" href="#">Change network</a>
@@ -42,9 +42,9 @@
 		<div class="nav-right">
 			<a class="nav-link nav-item" href="#">Sell on SafeMarket</a>
 			<a class="nav-link nav-item" href="#">Log in</a>
-			<img class="nav-line" src="library/img/nav-line.png" />
+			<img class="nav-line" src="/library/img/nav-line.png" />
 			<div class="cart-group">
-				<a href="#"><img class="cart-img" src="library/img/cart.png" /></a>
+				<a href="#"><img class="cart-img" src="/library/img/cart.png" /></a>
 				<a class="nav-link" href="#">Cart</a>
 			</div>
 			<a class="nav-link nav-item" href="#">What is SafeMarket?</a>
@@ -70,13 +70,13 @@
 
 	<div class="product-gallery">
 		<div class="gallery-main">
-			<img class="gallery-main" src="library/img/product-img-2.png" />
+			<img class="gallery-main" src="/library/img/product-img-2.png" />
 		</div>
 		<div class="gallery-preview">
-			<img class="product-previews" src="library/img/product-img-2.png" />
-			<img class="product-previews" src="library/img/product-img-2.png" />
-			<img class="product-previews" src="library/img/product-img-2.png" />
-			<img class="product-previews" src="library/img/product-img-2.png" />
+			<img class="product-previews" src="/library/img/product-img-2.png" />
+			<img class="product-previews" src="/library/img/product-img-2.png" />
+			<img class="product-previews" src="/library/img/product-img-2.png" />
+			<img class="product-previews" src="/library/img/product-img-2.png" />
 		</div>
 
 		<!-- Remove this div in mobile breakpoint 414 -->
@@ -122,7 +122,7 @@
 			</div>
 		</div>
 		<div class="store-header-grid">
-			<a href="#"><img class="info-icon" src="library/img/contact-icon.png" /></a>
+			<a href="#"><img class="info-icon" src="/library/img/contact-icon.png" /></a>
 			<a class="info-text">Contact Shop owner</a>
 		</div>
 
@@ -175,7 +175,7 @@
         <p>Copyright © <strong>ConsenSys 2017</strong>. All right reserved.</p>
        	<div class="footer-right">
         	<p>A <strong>ConsenSys</strong> formation.</p> 
-        	<img class="footer-logo" src="library/img/logo-footer.png" />
+        	<img class="footer-logo" src="/library/img/logo-footer.png" />
         </div>
       </div>
     </div>
@@ -186,7 +186,7 @@
  
  
    
-    <script src="library/js/remove-class.js"></script>
+    <script src="/library/js/remove-class.js"></script>
 
 
   </body>
