--- a/pages/store-page.html
+++ b/pages/store-page.html
@@ -9,7 +9,7 @@
     <!-- favicon -->
     <link rel="icon" href="#">
     <meta name="description" content="#">
-    <link rel="stylesheet" href="library/css/main.css">
+    <link rel="stylesheet" href="/library/css/main.css">
 
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700" rel="stylesheet">
 </head>
@@ -21,14 +21,14 @@
 			<div class="nav-left-top">
 				<a class="nav-title" href="#">SafeMarket</a>
 				<div class="nav-searchbar">
-					<img class="nav-search-bar" src="library/img/search-bar.png" />
+					<img class="nav-search-bar" src="/library/img/search-bar.png" />
 					<h6 class="nav-search-input">Input a store name</h6>
 				</div>
 			</div>
 			<div class="connection-status">
 				<div class="network-status">
 					<h6> Network Status: </h6>
-					<img class="connected" src="library/img/network-right.png" />
+					<img class="connected" src="/library/img/network-right.png" />
 					<a href="#" class="status"> IPFS connected</a>
 				</div>
 				<a class="change-network" href="#">Change network</a>
@@ -37,9 +37,9 @@
 		<div class="nav-right">
 			<a class="nav-link nav-item" href="#">Sell on SafeMarket</a>
 			<a class="nav-link nav-item" href="#">Log in</a>
-			<img class="nav-line" src="library/img/nav-line.png" />
+			<img class="nav-line" src="/library/img/nav-line.png" />
 			<div class="cart-group">
-				<a href="#"><img class="cart-img" src="library/img/cart.png" /></a>
+				<a href="#"><img class="cart-img" src="/library/img/cart.png" /></a>
 				<a class="nav-link" href="#">Cart</a>
 			</div>
 			<a class="nav-link nav-item" href="#">What is SafeMarket?</a>
@@ -54,15 +54,15 @@
 	<p class="store-description">A short description for this store</p>
 	<div class="store-header-info">
 		<div class="store-header-grid">
-			<img class="info-icon" src="library/img/store-loca-icon.png" />
+			<img class="info-icon" src="/library/img/store-loca-icon.png" />
 			<p class="info-text">the United States</p>
 		</div>
 		<div class="store-header-grid">
-			<img class="info-icon" src="library/img/store-person-icon.png" />
+			<img class="info-icon" src="/library/img/store-person-icon.png" />
 			<p class="info-text">Mike</p>
 		</div>
 		<div class="store-header-grid">
-			<img class="info-icon" src="library/img/contact-icon.png" />
+			<img class="info-icon" src="/library/img/contact-icon.png" />
 			<p class="info-text">Contact Shop owner</p>
 		</div>
 	</div>
@@ -82,9 +82,9 @@
 
 	<div class="Products-section">
 		<div class="product-overview">
-			<img class="product-overview-img" src="library/img/product-img-1.png" />
+			<img class="product-overview-img" src="/library/img/product-img-1.png" />
 				<div class="product-description">
-					<p class="product-name">Satoshi Cookies</p>
+					<p class="store-product-name">Satoshi Cookies</p>
 					<p class="product-price">$6</p>
 					<div class="add-to-cart-btn">
 						<a href="#">ADD TO CART</a>
@@ -93,9 +93,9 @@
 		</div>
 
 		<div class="product-overview">
-			<img class="product-overview-img" src="library/img/product-img-1.png" />
+			<img class="product-overview-img" src="/library/img/product-img-1.png" />
 				<div class="product-description">
-					<p class="product-name">Satoshi Cookies</p>
+					<p class="store-product-name">Satoshi Cookies</p>
 					<p class="product-price">$6</p>
 					<div class="add-to-cart-btn">
 						<a href="#">ADD TO CART</a>
@@ -104,9 +104,9 @@
 		</div>
 
 		<div class="product-overview">
-			<img class="product-overview-img" src="library/img/product-img-1.png" />
+			<img class="product-overview-img" src="/library/img/product-img-1.png" />
 				<div class="product-description">
-					<p class="product-name">Satoshi Cookies</p>
+					<p class="store-product-name">Satoshi Cookies</p>
 					<p class="product-price">$6</p>
 					<div class="add-to-cart-btn">
 						<a href="#">ADD TO CART</a>
@@ -115,9 +115,9 @@
 		</div>
 
 		<div class="product-overview">
-			<img class="product-overview-img" src="library/img/product-img-1.png" />
+			<img class="product-overview-img" src="/library/img/product-img-1.png" />
 				<div class="product-description">
-					<p class="product-name">Satoshi Cookies</p>
+					<p class="store-product-name">Satoshi Cookies</p>
 					<p class="product-price">$6</p>
 					<div class="add-to-cart-btn">
 						<a href="#">ADD TO CART</a>
@@ -126,9 +126,9 @@
 		</div>
 
 		<div class="product-overview">
-			<img class="product-overview-img" src="library/img/product-img-1.png" />
+			<img class="product-overview-img" src="/library/img/product-img-1.png" />
 				<div class="product-description">
-					<p class="product-name">Satoshi Cookies</p>
+					<p class="store-product-name">Satoshi Cookies</p>
 					<p class="product-price">$6</p>
 					<div class="add-to-cart-btn">
 						<a href="#">ADD TO CART</a>
@@ -206,7 +206,7 @@
 	<div class="info-grid">
 		<div class="info-left question">
 			<p class="about-header">Exchange Rate Buffer</p>
-			<img class="ques-hover" src="library/img/question-icon.png" />
+			<img class="ques-hover" src="/library/img/question-icon.png" />
 		</div>
 		<div class="info-right">
 			<p class="info-text">10%</p>
@@ -275,7 +275,7 @@
         <p>Copyright © <strong>ConsenSys 2017</strong>. All right reserved.</p>
        	<div class="footer-right">
         	<p>A <strong>ConsenSys</strong> formation.</p> 
-        	<img class="footer-logo" src="library/img/logo-footer.png" />
+        	<img class="footer-logo" src="/library/img/logo-footer.png" />
         </div>
       </div>
     </div>
